--- a/WebContent/multiapp.html
+++ b/WebContent/multiapp.html
@@ -9,19 +9,19 @@
 				appUri:'/FeatureBrowser', 
 				pathInfo: '/', 
 				themeUri: '/VAADIN/themes/example', 
-				versionInfo : {toolkitVersion:"5.9.9-INTERNAL-NONVERSIONED-DEBUG-BUILD",applicationVersion:"NONVERSIONED"}
+				versionInfo : {vaadinVersion:"6.0.0-INTERNAL-NONVERSIONED-DEBUG-BUILD",applicationVersion:"NONVERSIONED"}
 			},
 			'calc' :{
 				appUri:'/Calc', 
 				pathInfo: '/', 
 				themeUri: '/VAADIN/themes/example', 
-				versionInfo : {toolkitVersion:"5.9.9-INTERNAL-NONVERSIONED-DEBUG-BUILD",applicationVersion:"NONVERSIONED"}
+				versionInfo : {vaadinVersion:"6-INTERNAL-NONVERSIONED-DEBUG-BUILD",applicationVersion:"NONVERSIONED"}
 			},
 			'hello' :{
 				appUri:'/HelloWorld', 
 				pathInfo: '/', 
 				themeUri: '/VAADIN/themes/example', 
-				versionInfo : {toolkitVersion:"5.9.9-INTERNAL-NONVERSIONED-DEBUG-BUILD",applicationVersion:"NONVERSIONED"}
+				versionInfo : {vaadinVersion:"6.0.0-INTERNAL-NONVERSIONED-DEBUG-BUILD",applicationVersion:"NONVERSIONED"}
 			}
 
 			
