Quick Vaadinification of index.html and licensing-guidelines.html - still needs proper remake.
svn changeset:7834 branch:6.0

--- a/WebContent/license/licensing-guidelines.html
+++ b/WebContent/license/licensing-guidelines.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>IT Mill Toolkit 5</title>
+		<title>Vaadin</title>
 		<link rel="stylesheet" type="text/css" href="../demo/css/styles.css" />
 		<!--[if IE]>
 		<link rel="stylesheet" type="text/css" href="../demo/css/ie.css" />
@@ -10,11 +10,13 @@
 	</head>
 	<body>
 	
-	<div id="container">
-	
+<div id="container">
+		<div id="header-links">
+			  <a href="http://vaadin.com" title="Open vaadin.com">vaadin.com &gt;</a>
+		</div>
 		<div class="header">
-			<h1>Introducing IT Mill Toolkit 5</h1>
-			<em>Effortless web application development for Java-programmers.</em>
+			<h1>@version@</h1>
+			
 		</div> <!-- /Header -->
 		
 		<div class="content">
@@ -59,7 +61,7 @@ Source license</p>
 </ul>
 
 
-<h1><a name="opensource" />Open Source License</h1>
+<h1><a name="opensource" />Open Source License</a></h1>
 <pre>
 		IT MILL TOOLKIT LICENSE INFORMATION
 		
@@ -274,13 +276,11 @@ available from other locations.
 			
 			<div class="clearer"></div>
 		</div> <!-- /content-->
-		
-		<div class="footer">
-			<a href="http://www.itmill.com">IT Mill Ltd.</a>
-			<em>Interfacing IT</em>
-		</div> <!-- /footer -->
+
 	
 	</div> <!-- /container -->
-	
+	<div class="footer">
+			<a href="http://www.itmill.com">IT Mill Ltd.<br/>Interfacing IT</a>
+	</div> <!-- /footer -->
 	</body>
 </html>
