#2904 Toolkit -> Vaadin renames: search for "IT Mill" and "itmill", partial changes including many URLs
svn changeset:7842 branch:6.0

--- a/WebContent/statictestfiles/ticket2095_popup.html
+++ b/WebContent/statictestfiles/ticket2095_popup.html
@@ -15,7 +15,7 @@ function setTarget() {
 </p>
 
 <form action="http://www.google.fi/search">
-<input type="text" name="q" value="it mill toolkit" />
+<input type="text" name="q" value="vaadin" />
 <input type="submit" value="Google!"/>
 </form>
 
