--- a/src/com/vaadin/demo/package.html
+++ b/src/com/vaadin/demo/package.html
@@ -5,7 +5,7 @@
 
 <body bgcolor="white">
 
-<p>Provides several fully functional IT Mill Toolkit example applications. These
+<p>Provides several fully functional Vaadin example applications. These
 highlight certain aspects of the toolkit and how it can be
 used to produce simple, elegant yet powerful user interface driven
 applications.</p>
@@ -15,7 +15,7 @@ applications.</p>
 text "Hello, World!" on the screen.</li>
 <li><strong>Calc</strong> implements a calculator application which
 demonstrates how to build a bit more complicated user interface and how the
-application can interact with the usern through that interface.</li>
+application can interact with the user through that interface.</li>
 </ul>
 
 </body>
