--- a/src/com/vaadin/event/package.html
+++ b/src/com/vaadin/event/package.html
@@ -10,7 +10,7 @@
 <p>Provides classes and interfaces for the inheritable event
 model. The model supports inheritable events and a flexible way of
 registering and unregistering event listeners. It's a fundamental building
-block of the IT Mill Toolkit, and as it is included in
+block of Vaadin, and as it is included in
 {@link com.vaadin.ui.AbstractComponent}, all UI components
 automatically support it.</p>
 
