--- a/src/com/vaadin/package.html
+++ b/src/com/vaadin/package.html
@@ -5,14 +5,14 @@
 
 <body bgcolor="white">
 
-<p>This package is the base of the IT Mill Toolkit. The base package 
-contains the Application class, the starting point of any aplication that uses IT Mill Toolkit.
+<p>This package is the base of Vaadin. The base package 
+contains the Application class, the starting point of any aplication that uses Vaadin.
 The sub-packages from this point contain application components and utilities.
 </p>
 
 <h2>Package Specification</h2>
 
-	<b>IT Mill Toolkit is composed of the following packages:</b>
+	<b>Vaadin is composed of the following packages:</b>
 	<dl>
 		<dt>com.vaadin.data</dt>
 		 <dd>A library of interfaces for transparently binding UI components to datasources.</dd>
