--- a/src/com/vaadin/service/package.html
+++ b/src/com/vaadin/service/package.html
@@ -7,7 +7,7 @@
 
 <!-- Package summary here -->
 
-<p>Provides some general service classes used throughout a IT Mill Toolkit
+<p>Provides some general service classes used throughout Vaadin
 based applications.</p>
 
 <!-- <h2>Package Specification</h2> -->
