--- a/src/com/vaadin/ui/package.html
+++ b/src/com/vaadin/ui/package.html
@@ -8,7 +8,7 @@
 
 <!-- Package summary here -->
 
-<p>Provides interfaces and classes in the IT Mill Toolkit.</p>
+<p>Provides interfaces and classes in Vaadin.</p>
 
 <h2>Package Specification</h2>
 
