Incomplete - task#2904 Toolkit -> Vaadin renames
svn changeset:7850 branch:6.0

--- a/src/com/vaadin/demo/package.html
+++ b/src/com/vaadin/demo/package.html
@@ -6,7 +6,7 @@
 <body bgcolor="white">
 
 <p>Provides several fully functional Vaadin example applications. These
-highlight certain aspects of the toolkit and how it can be
+highlight certain aspects of the Vaadin and how it can be
 used to produce simple, elegant yet powerful user interface driven
 applications.</p>
 
