#2904 renamed JavaScript vaadin.toolkitConfigurations to vaadin.vaadinConfigurations
svn changeset:7852 branch:6.0

--- a/WebContent/multiapp.html
+++ b/WebContent/multiapp.html
@@ -4,7 +4,7 @@
 <title>Multiple embedded applications</title>
 <script type="text/javascript">
 	var vaadin = {
-		toolkitConfigurations: {
+		vaadinConfigurations: {
 			'fb' :{
 				appUri:'/FeatureBrowser', 
 				pathInfo: '/', 
