#2904 Miscellaneous Toolkit -> Vaadin renames
svn changeset:7854 branch:6.0

--- a/WebContent/multiapp.html
+++ b/WebContent/multiapp.html
@@ -33,7 +33,7 @@
 <body>
 	<iframe id="__gwt_historyFrame" style="width:0;height:0;border:0;overflow:hidden" src="javascript:false"></iframe>
 	
-	<p>Multiple toolkits per html file test page</p>
+	<p>Multiple Vaadin applications per html file test page</p>
 	
 	<div id="fb" style="height:400px;border:2px solid red;margin:0"></div>
 	<div id="calc" style="border:2px solid green;margin:0"></div>
