--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -99,7 +99,7 @@
 				
 				<h4>Additional demos</h4>
 				<ul><li><a class="demoapp" href="Reservr">Reservr &ndash; reservation application</a> &nbsp; (<a href="docs/example-source/com/vaadin/demo/reservation">sources</a>)</li>
-					<li><a class="demoapp" href="ToolkitTunesLayout/">ToolkitTunes &ndash; advanced layout &amp; theme</a> &nbsp; (<a href="docs/example-source/com/vaadin/demo/ToolkitTunesLayout.java.html">sources</a>)</li>
+					<li><a class="demoapp" href="VaadinTunesLayout/">VaadinTunes &ndash; advanced layout &amp; theme</a> &nbsp; (<a href="docs/example-source/com/vaadin/demo/VaadinTunesLayout.java.html">sources</a>)</li>
 					<li><a class="demoapp" href="Coverflow/">Coverflow &ndash; Flex integration</a> &nbsp; (<a href="docs/example-source/com/vaadin/demo/coverflow">sources</a>)</li>
 				</ul>
 				
